--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>a very manly sprint</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <h1>very empty</h1>
+    <h2>so so empty</h2>
 </body>
 </html>
