--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a very manly sprint</title>
-    <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
+  <script src="lib/react.development.js"></script>
+  <script src="lib/react-dom.development.js"></script>
+  <script src="lib/react-router-dom.min.js"></script>
+  <script src="lib/axios.js"></script>
+
+
+  <link rel="stylesheet" href="assets/css/main.css">
+  <title>React Starter</title>
 </head>
+
 <body>
-    <h1>very empty</h1>
-    <h2>so so empty</h2>
-    <h3>not eny more</h3>
-    <h4>reem</h4>
+  <div id="root"></div>
+
+  <script type="module/babel" data-presets="ca-preset" src="app.js"></script>
+
+  <script src="lib/loadBabelModules.js"></script>
+  <script src="lib/babel.js"></script>
+  <script src="lib/babel-preset.js"></script>
 </body>
+
 </html>
