--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
+
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
   <script src="lib/react-router-dom.min.js"></script>
   <script src="lib/axios.js"></script>
+
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d1abf76b87.js" crossorigin="anonymous"></script>
 
 
   <link rel="stylesheet" href="assets/css/main.css">
